# algorithm_playground

./: Cargo.toml  README.md
src/: lib.rs
src/algorithms/: searching.rs  sorting.rs
